<resources>
    <string name="app_name">practica final</string>
    <string name="title">Depressed-o-matic</string>
    <string name="question">Are you feeling depressed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="message_encouragement">You are doing great, take a doggo</string>
    <string name="dog">"Dog "</string>
    <string name="text_form">Write the breed you lik the most from the list or click it</string>
    <string name="breed">Breed</string>
    <string name="save">Save</string>
    <string name="goku_encouragement">Keep going master</string>
</resources>