<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/textForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_form" />

    <EditText
        android:id="@+id/typeofdog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/breed"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/backButtonForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveChanges"
        android:text="@string/save" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/breedList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>